# oracle-automate

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  rust-toolchain.toml  scheduler.toml
.github/workflows/: ci.yml  release.yml
apps/oracle-automate-bench/: Cargo.toml
apps/oracle-automate-bench/src/: main.rs
apps/oracle-automate-gw/: Cargo.toml
apps/oracle-automate-gw/src/: main.rs
apps/oracle-automate-ingest/: Cargo.toml
apps/oracle-automate-ingest/src/: main.rs
apps/oracle-automate-server/: Cargo.toml
apps/oracle-automate-server/src/: context.rs  lib.rs  main.rs  metrics.rs  prompts.rs  resources.rs  seed.rs  tools.rs
apps/oracle-automate-server/tests/: audit_writes.rs  business_partner.rs  cache_tools.rs  kb_navigate.rs  live_adt.rs  spec_utilities.rs
apps/oracle-automate-tui/: Cargo.toml
apps/oracle-automate-tui/src/: app.rs  main.rs  traffic.rs  ui.rs
apps/oracle-automate-tui/src/tabs/: kb.rs  logs.rs  mod.rs  rag.rs  sessions.rs  tools.rs
apps/sample-client/: Cargo.toml
apps/sample-client/src/: main.rs
apps/sample-server/src/: main.rs
apps/web/: package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/mcp/: route.ts
apps/web/src/app/graph/: page.tsx
apps/web/src/app/query-lab/: page.tsx
apps/web/src/app/skills/: page.tsx
apps/web/src/app/tools/: page.tsx
apps/web/src/components/: sidebar.tsx
apps/web/src/lib/: mcp.ts
crates/mcp-client/src/: lib.rs
crates/mcp-core/src/: error.rs  jsonrpc.rs  lib.rs  protocol.rs
crates/mcp-server/src/: elicit.rs  lib.rs  registry.rs  server.rs
crates/mcp-server/tests/: integration.rs
crates/mcp-transport/src/: http.rs  lib.rs  stdio.rs
crates/oracle-automate-adt/: Cargo.toml
crates/oracle-automate-adt/src/: client.rs  destination.rs  error.rs  http.rs  lib.rs  mock.rs  types.rs
crates/oracle-automate-adt/tests/: http_integration.rs  oic_pod.rs
crates/oracle-automate-channels/: Cargo.toml
crates/oracle-automate-channels/src/: lib.rs
crates/oracle-automate-connectors/: Cargo.toml
crates/oracle-automate-connectors/src/: lib.rs
crates/oracle-automate-erp/: Cargo.toml
crates/oracle-automate-erp/src/: client.rs  credentials.rs  erp_result.rs  error.rs  fusion.rs  lib.rs  metadata_cache.rs  odata.rs  pool.rs  retry.rs  soap.rs  transaction.rs
crates/oracle-automate-erp/tests/: fusion_contract.rs  fusion_pod.rs
crates/oracle-automate-fusion-mock/: Cargo.toml
crates/oracle-automate-fusion-mock/src/: lib.rs  main.rs
crates/oracle-automate-graph/: Cargo.toml
crates/oracle-automate-graph/src/: community.rs  entity.rs  lib.rs  ppr.rs  raptor.rs  store.rs
crates/oracle-automate-ingest/: Cargo.toml
crates/oracle-automate-ingest/src/: chunker.rs  crawler.rs  embed.rs  fit_markdown.rs  lib.rs  pipeline.rs  rate_limit.rs  robots.rs
crates/oracle-automate-kb/: Cargo.toml
crates/oracle-automate-kb/src/: doc_tree.rs  lib.rs  qdrant.rs  schema.rs  store.rs
crates/oracle-automate-memory/: Cargo.toml
crates/oracle-automate-memory/src/: lib.rs
crates/oracle-automate-observability/: Cargo.toml
crates/oracle-automate-observability/src/: audit.rs  lib.rs  metrics.rs  tracing_init.rs
crates/oracle-automate-oic-mock/: Cargo.toml
crates/oracle-automate-oic-mock/src/: lib.rs  main.rs
crates/oracle-automate-rag/: Cargo.toml
crates/oracle-automate-rag/src/: graph_layer.rs  lib.rs  rerank.rs
crates/oracle-automate-rfc/: Cargo.toml
crates/oracle-automate-rfc/src/: lib.rs  metadata_cache.rs  soap.rs
crates/oracle-automate-scheduler/: Cargo.toml
crates/oracle-automate-scheduler/src/: lib.rs
crates/oracle-automate-skills/: Cargo.toml
crates/oracle-automate-skills/src/: lib.rs
deploy/: Dockerfile  oracle-automate-connection.example.toml  sap-automate-destination.example.toml
deploy/demo/: README.md
deploy/demo/destinations/: mock-oic.toml
deploy/grafana/: oracle-automate-overview.json  sap-automate-overview.json
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.example.yaml  service.yaml
deploy/prometheus/: alerts.yaml  servicemonitor.yaml
docs/: COMPARISON.md  GAP_ANALYSIS.md  INTEGRATION.md  ORACLE_CORRECTNESS.md  PORTING_STRATEGY.md  PRODUCTION_PLAN.md  PRODUCTION_READINESS.md  ROADMAP.md  RUNBOOK_DEV_TENANT.md  SAP_CORRECTNESS.md  SLO.md  tui-rag-tab.html
docs/sample-help-corpus/: ar-billing.html  gl-period-close.html  hcm-payroll.html  inv-receiving.html
skills/: abap-code-review.md  aipnv-ai-pairing.md  analytics-migration.md  bw-to-datasphere-migration.md  clean-core-audit.md  custom-code-review.md  customer-master-elicit.md  extensibility-audit.md  karpathy-guidelines.md  odata-service-design.md  period-close-investigation.md  po-creation-elicit.md  rap-service-scaffolding.md  rest-service-design.md  rest-service-scaffolding.md  sandbox-impact-analysis.md  sandbox-publish-elicit.md  security-sod-audit.md  transport-impact-analysis.md  transport-release-elicit.md
