[package]
name = "oracle-automate-ingest-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Oracle-Automate ingestion CLI (Phase 1A)."

[[bin]]
name = "oracle-automate-ingest"
path = "src/main.rs"

[dependencies]
oracle-automate-kb = { workspace = true, features = ["qdrant"] }
oracle-automate-ingest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
