[package]
name = "oracle-automate-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Oracle-Automate connectors: ADT (ABAP), Signavio (BPMN), LeanIX (EAM)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
