[package]
name = "oracle-automate-erp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Oracle-Automate ERP client abstraction (Oracle Fusion Cloud ERP) with pooling, retry, circuit-breaker, and credential layering."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, optional = true }

[features]
default = []
# Enables the live Oracle Fusion Cloud ERP transport over REST/JSON
# (HttpFusionClient + FusionPartyClient).  Pulls in reqwest.
fusion = ["reqwest"]

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
oracle-automate-fusion-mock = { path = "../oracle-automate-fusion-mock" }

# Live Fusion REST contract tests (axum mock of the Fusion REST API).
# Only built when the `fusion` feature is active — the workspace test run
# activates it via the server's `oracle-automate-erp/fusion` dependency.
[[test]]
name = "fusion_contract"
required-features = ["fusion"]

# Phase 4/5: drive the live clients against the standalone mock Fusion pod
# (read + gated write + timeout). Swap to a real pod by changing the base URL.
[[test]]
name = "fusion_pod"
required-features = ["fusion"]
