[package]
name = "oracle-automate-fusion-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone mock Oracle Fusion Cloud ERP REST API for offline Phase 4/5 testing — swap ORACLE_FUSION_BASE_URL to a real pod to go live."

[lib]
name = "oracle_automate_fusion_mock"
path = "src/lib.rs"

[[bin]]
name = "oracle-automate-fusion-mock"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
