[package]
name = "oracle-automate-kb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Oracle-Automate knowledge base: Qdrant/Postgres/ArangoDB clients and document schema."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
sha2 = { workspace = true }
hex = { workspace = true }

[features]
default = []
qdrant = ["reqwest", "tokio"]

[dev-dependencies]
tokio = { workspace = true }
