[package]
name = "oracle-automate-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Oracle-Automate layered RAG engine (Phase 3 / Phase 5A)."

[dependencies]
oracle-automate-kb = { workspace = true }
oracle-automate-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
